# slideshow-creator

./: .gitignore  README.md  pyproject.toml
src/slideshow_creator/: __init__.py  sanitize.py
src/slideshow_creator/prompts/: antv_syntax.md  slides.jinja
src/slideshow_creator/sidecar/: package-lock.json  package.json  render.mjs
tests/: test_slideshow.py
