[project]
name = "slideshow-creator"
version = "0.1.0"
license = "MIT"
description = "Open Notebook creator: LLM-designed reveal.js slide decks with AntV data slides (slideshow.v1)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "open-notebook-creator-sdk",
    "esperanto>=2.19",
    "ai-prompter>=0.3.1",
    "langchain-core>=0.3",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.entry-points."open_notebook.creators"]
slideshows = "slideshow_creator:SlideshowCreator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slideshow_creator"]
# Ship the Node sidecar source, but never bundle its installed node_modules
# (sharp's prebuilt binary is platform-specific; install with `npm ci` on the target).
exclude = ["src/slideshow_creator/sidecar/node_modules"]

[tool.uv.sources]
open-notebook-creator-sdk = { git = "https://github.com/Notebooker-ai/open-notebook-creator-sdk.git", branch = "main" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
